@@ -315,16 +315,6 @@ class XYZReader(base.Reader):
         numframes = int(counter / linesPerFrame)
         return numframes
 
-    def __iter__(self):
-        self.ts.frame = 0  # start at 0 so that the first frame becomes 1
-        self._reopen()
-        while True:
-            try:
-                yield self._read_next_timestep()
-            except EOFError:
-                self.close()
-                raise StopIteration
-
     def _read_next_timestep(self, ts=None):
         # check that the timestep object exists
         if ts is None:
