@@ -33,6 +33,8 @@ The rules for this file:
   * Removed FormatError, now replaced by ValueError
   * distances.contact_matrix(): changed keyword 'suppress_progmet' to
     'quiet'
+  * base.Reader now defines __iter__
+  * __iter__ removed from many Readers (now use base.Reader implementation)
 
   Fixes
   * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for
